hope is coming soon

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
     </style>
 <body>
     <h1>Welcome To Your List!!</h1>
-    <form action="sertin.php" method="POST"> 
+    <form action="login.php" method="POST"> 
         <div style="text-align:center; vertical-align:middle">
             <input  type="email" placeholder="账号" size="50px" name="username">
         </div>
