--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
     </head>
 <body>
     <h1>We are waiting for your List!!</h1>
-    <form action="sertin.php" method="POST">
+    <form action="register.php" method="POST">
         <div style="text-align:center; vertical-align:middle">
             <input type="email" placeholder="Username" size="50px" class="class2" name="username"> 
         </div>
